--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdk 32
@@ -95,8 +94,6 @@ dependencies {
 
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    // Hilt
-    implementation 'com.google.dagger:hilt-android:2.31.2-alpha'
-    kapt 'com.google.dagger:hilt-android-compiler:2.31.2-alpha'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
